--- a/HeroesOfPymoli/HeroesOfPymoli_Taylor.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_Taylor.ipynb
@@ -255,7 +255,7 @@
     "unique_items = len(purchase_data[\"Item Name\"].unique())\n",
     "# Find the avg of purchased items\n",
     "average_price = purchase_data[\"Price\"].mean()\n",
-    "# Find the total num of purchases (same as total number of players)\n",
+    "# Find the total num of purchases\n",
     "total_purchases = purchase_data[\"Purchase ID\"].count()\n",
     "# Find total revenue made\n",
     "total_revenue = purchase_data[\"Price\"].sum()\n",
