--- a/HeroesOfPymoli/HeroesOfPymoli_Taylor.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_Taylor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "0            576"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "0                     179         $3.05                  780     $2,379.77"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
        "Other / Non-Disclosed           11                 1.91%"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
        "Other / Non-Disclosed               $50.19                         $4.56  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
        "40+             12                 2.08%"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -705,7 +705,7 @@
        "40+                               $3.19  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +814,7 @@
        "Iskadarya95               3                  $4.37               $13.10"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +946,7 @@
        "108     Extraction, Quickblade Of Trembling Hands                  $31.77  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1087,7 @@
        "103     Singed Scalpel                                             $34.80  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1101,6 +1101,19 @@
     "most_profitable['Total Purchase Value'] = most_profitable['Total Purchase Value'].map(\"${:,.2f}\".format)\n",
     "\n",
     "most_profitable.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3 Trends:\n",
+    "\n",
+    "- This game is most popular with Males, accounting for 392 more players than the other genders combined and over $1500 more dollars spent.\n",
+    "\n",
+    "- The majority of purchases take place with users between the ages of high school & college students.  This would make sense as these aged students typically have jobs while also have the free time to play video games as well.\n",
+    "\n",
+    "- While the average purchase per person for all genders lies around $3-$3.30, the 3 most popular items purchased are all over $1 more than the average.  This must mean these items are vitale or special to the game play."
    ]
   }
  ],
